kubernetes/local-devices/proxmox-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxmox-external
  namespace: default
spec:
  type: ExternalName
  externalName: 192.168.68.2
  ports:
  - port: 8006
    targetPort: 8006
    protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxmox-external
  namespace: default
subsets:
- addresses:
  - ip: 192.168.68.2
  ports:
  - port: 8006
    protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: proxmox
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - proxmox.home.mcztest.com
    secretName: proxmox-tls
  rules:
  - host: proxmox.home.mcztest.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: proxmox-external
            port:
              number: 8006
